# avcap

./: AUTHORS  BuildAndCopy2Public.sh  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  avcap-config.h  avcap.pc.in  config.h.in  configure  configure.in
avcap/: ConnectorManager.cpp  ControlManager.cpp  DeviceCollector.cpp  DeviceDescriptor.cpp  FormatManager.cpp  IOBuffer.cpp  Makefile.am  Makefile.in
avcap/linux/: AVC_Device.cpp  AVC_DeviceDescriptor.cpp  AVC_FormatManager.cpp  AVC_Reader.cpp  AVC_VidCapManager.cpp  Makefile.am  Makefile.in  V4L1_ConnectorManager.cpp  V4L1_Control.cpp  V4L1_ControlManager.cpp  V4L1_Device.cpp  V4L1_DeviceDescriptor.cpp  V4L1_FormatManager.cpp  V4L1_VidCapManager.cpp  V4L2_Connector.cpp  V4L2_ConnectorManager.cpp  V4L2_ControlBase.cpp  V4L2_ControlManager.cpp  V4L2_Device.cpp  V4L2_DeviceDescriptor.cpp  V4L2_FormatManager.cpp  V4L2_MenuControl.cpp  V4L2_Tuner.cpp  V4L2_VidCapManager.cpp  error.cpp  frame.cpp  ieee1394io.cpp  raw1394util.cpp
avcap/osx/: Makefile.am  Makefile.in  QT_ConnectorManager.cpp  QT_Control.cpp  QT_ControlManager.cpp  QT_Device.cpp  QT_DeviceDescriptor.cpp  QT_DeviceEnumerator.cpp  QT_FormatManager.cpp  QT_VidCapManager.cpp
avcap/windows/: Crossbar.cpp  DS_Connector.cpp  DS_ConnectorManager.cpp  DS_Control.cpp  DS_ControlManager.cpp  DS_Device.cpp  DS_DeviceDescriptor.cpp  DS_FormatManager.cpp  DS_Tuner.cpp  DS_VidCapManager.cpp  Makefile.am  Makefile.in  SampleGrabberCallback.cpp
contrib/: avcap.sln  avcap.vcproj  avcap.vcxproj  captest.vcproj
include/: Makefile.am  Makefile.in
include/avcap/: Makefile.am  Makefile.in
include/avcap/windows/: HelpFunc.h  dxtrans.h
test/: Makefile.am  Makefile.in  TestCaptureHandler.cpp  TestCaptureHandler.h  captest.cpp
