library_includedir=$(includedir)/avcap

library_include_HEADERS=\
	CaptureDevice.h   ConnectorManager.h       DeviceDescriptor.h  IOBuffer.h      Tuner_avcap.h\
	Control_avcap.h   Manager.h		   		   avcap-export.h\
	CaptureHandler.h  ControlManager.h\
	CaptureManager.h  FormatManager.h     	   singleton.h\
	Connector.h       DeviceCollector.h        Interval.h\
	$(top_builddir)/avcap-config.h	  		   avcap.h			   log.h\
	ProbeValues.h
	
EXTRA_DIST=\
	windows/Crossbar.h\
	windows/DS_ControlManager.h\
	windows/DS_Tuner.h\
	windows/SampleGrabberCallback.h\
	windows/DS_Connector.h\
	windows/DS_Device.h\
	windows/DS_VidCapManager.h\
	windows/DS_ConnectorManager.h\
	windows/DS_DeviceDescriptor.h\
	windows/FormatNames.h\
	windows/DS_Control.h\
	windows/DS_FormatManager.h\
	windows/HelpFunc.h\
	linux/AVC_ConnectorManager.h\
	linux/V4L1_Device.h\
	linux/AVC_ControlManager.h\
	linux/ivtv.h\
	linux/V4L1_FormatManager.h\
	linux/AVC_DeviceDescriptor.h\
	linux/V4L1_VidCapManager.h\
	linux/V4L2_FormatManager.h\
	linux/AVC_Device.h\
	linux/pwc-ioctl.h\
	linux/V4L2_BoolControl.h\
	linux/raw1394util.h\
	linux/V4L2_ButtonControl.h\
	linux/V4L2_IntControl.h\
	linux/V4L2_CtrlClassControl.h\
	linux/AVC_FormatManager.h\
	linux/uvc_compat.h\
	linux/V4L2_Connector.h\
	linux/AVC_Reader.h\
	linux/V4L1_Connector.h\
	linux/V4L2_ConnectorManager.h\
	linux/V4L2_MenuControl.h\
	linux/AVC_VidCapManager.h\
	linux/V4L1_ConnectorManager.h\
	linux/V4L2_ControlBase.h\
	linux/error.h\
	linux/V4L1_Control.h\
	linux/V4L2_ControlManager.h\
	linux/V4L2_Tuner.h\
	linux/frame.h\
	linux/V4L1_ControlManager.h\
	linux/V4L2_DeviceDescriptor.h\
	linux/V4L2_VidCapManager.h\
	linux/ieee1394io.h\
	linux/V4L1_DeviceDescriptor.h\
	linux/V4L2_Device.h\
	osx/QT_ConnectorManager.h\
	osx/QT_ControlManager.h\
	osx/QT_Device.h\
	osx/QT_DeviceDescriptor.h\
	osx/QT_FormatManager.h\
	osx/QT_VidCapManager.h\
	osx/QT_DeviceEnumerator.h\
	osx/QT_Control.h
